# skilgen

./: CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  skilgen-sync.yml
examples/codebase-and-requirements/: README.md
examples/codebase-only/: README.md
examples/external-skills/: README.md
examples/requirements-only/: README.md
scripts/: README.md
skilgen/: __init__.py  autoupdate.py  deep_agents_core.py  deep_agents_runtime.py  delivery.py  enterprise_skills.py  external_skills.py  sdk.py
skilgen/agents/: __init__.py  codebase_signals.py  decision_planner.py  domain_graph_planner.py  feature_extractor.py  framework_fingerprint.py  model_registry.py  requirements_parser.py  roadmap_planner.py
skilgen/api/: server.py  service.py
skilgen/cli/: main.py
skilgen/core/: config.py  context.py  evals.py  freshness.py  models.py  project_memory.py  repo_state.py  requirements.py  run_memory.py  score.py  validation.py
skilgen/generators/: package.py  skills.py
tests/: test_api_smoke.py  test_cli.py  test_config.py  test_context.py  test_decision_planner.py  test_delivery.py  test_model_registry.py  test_packaging.py  test_plan_cli.py  test_roadmap_planner.py  test_runtime_hardening.py  test_score.py  test_sdk.py  test_validate_cli.py
